Fix overflowing color mapping input width

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -128,8 +128,6 @@ table {
     input {
         margin-right: -1px;
         width: 100%;
-        width: -moz-available; /* WebKit-based browsers will ignore this. */
-        width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-        width: fill-available;
+        box-sizing: border-box;
     }
 }
